Fixed style change that made mobile navmenu invisible

--- a/src/styling/bci.css
+++ b/src/styling/bci.css
@@ -5,7 +5,7 @@
   justify-content: space-evenly;
 }
 
-button {
+.explanation-option-button {
   display: flex;
   background: none;
   border: none;
